# Unboxito

./: Cargo.toml
crates/unboxit-core/: Cargo.toml
crates/unboxit-core/src/: lib.rs
crates/unboxit-derive/: Cargo.toml
crates/unboxit-derive/src/: lib.rs
crates/unboxit-derive/tests/: test_derive.rs
crates/unboxit-json/: Cargo.toml
crates/unboxit-json/src/: lib.rs
crates/unboxit-json/tests/: serializer_test.rs
src/: lib.rs
