[package]
name = "unboxit-derive"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"

[dev-dependencies]
unboxit = { version = "0.1.0", path = "../unboxit-core" }
unboxit-json = { version = "0.1.0", path = "../unboxit-json" }
